--- a/index.html
+++ b/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Document</title>
-</head>
-<body>
- 
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="main.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <title>Random Quote Generator</title>
+  </head>
+  <body>
+    <div class="container">
+     <a href="#" class="btn">Generate Quote</a>
+      <p class="container__quote">
+        Quote: <span class="container__quote--value">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nesciunt, harum.</span>
+      </p>
+      <p class="container__author">
+       - <span class="container__author--value">author</span>
+      </p>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
